--- a/views/home.html
+++ b/views/home.html
@@ -41,36 +41,42 @@
         <section class="main-slider">
             <img src="./img/main-slider-1.jpg" alt="imagen main 1">
         </section>
-        <section>
+        <section class="main-productos">
             <h3>NUESTRAS GUARDERIAS</h3>
-            <img class="imagen-guarderia1" src="./img/Guarderia5.svg" alt="imagen guarderia 1">
+            <div class="guarderia-1"><i class="fas fa-home"></i></div>
             <h4>Guarderia 1</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, neque!</p>
-            <a href="/detalle-producto">RESERVAR</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laboriosam molestias quos eum placeat
+                quibusdam explicabo autem debitis repellendus expedita?</p>
+            <div class="boton-reservar"><a href="/detalle-producto">RESERVAR</a></div>
         </section>
-        <section>
-            <h3>---------------SOBRE NOSOTROS---------------</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, nostrum?</p>
+        <section class="sobre-nosotros">
+            <h3>SOBRE NOSOTROS</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quo eveniet nobis, dolor repudiandae vel id
+                et repellendus quis commodi delectus voluptatum iste vero nisi maxime eligendi. Possimus, a dolore.</p>
         </section>
 
     </main>
 
     <footer>
-        <nav>
-            <a href="/inicia-sesion">Iniciar Sesion</a>
-            <a href="/registro">Registrarse</a>
-            <a href="#">Nosotros</a>
-            <a href="#">Contacto</a>
-            <a href="#">FAQ</a>
-            <a href="#">Terminos y condiciones</a>
+        <nav class="footer-nav">
+            <div class="footer-nav1">
+                <a href="/inicia-sesion">Iniciar Sesion</a>
+                <a href="/registro">Registrarse</a>
+                <a href="#">Nosotros</a>
+            </div>
+            <div class="footer-nav2">
+                <a href="#">Contacto</a>
+                <a href="#">FAQ</a>
+                <a href="#">Terminos y condiciones</a>
+            </div>
         </nav>
-        <div>
+        <div class="redes">
             <h4>SEGUINOS EN NUESTRAS REDES</h4>
             <a href="#"><i class="fab fa-facebook-square"></i></a>
             <a href="#"><i class="fab fa-instagram-square"></i></a>
             <a href="#"><i class="fab fa-twitter-square"></i></a>
         </div>
-        <h6>Copyright © 2022 AlojaMascotas S.R.L.</h6>
+        <h6 class="copyright">Copyright © 2022 AlojaMascotas S.R.L.</h6>
 
     </footer>
 
