--- a/views/home.html
+++ b/views/home.html
@@ -58,18 +58,18 @@
     </main>
 
     <footer>
-        <nav class="footer-nav">
+        <div class="footer-nav">
             <div class="footer-nav1">
-                <a href="/inicia-sesion">Iniciar Sesion</a>
-                <a href="/registro">Registrarse</a>
-                <a href="#">Nosotros</a>
+                <a href="/inicia-sesion">Iniciar Sesion</a><br>
+                <a href="/registro">Registrarse</a><br>
+                <a href="#">Nosotros</a><br>
             </div>
             <div class="footer-nav2">
-                <a href="#">Contacto</a>
-                <a href="#">FAQ</a>
-                <a href="#">Terminos y condiciones</a>
+                <a href="#">Contacto</a><br>
+                <a href="#">FAQ</a><br>
+                <a href="#">Terminos y condiciones</a><br>
             </div>
-        </nav>
+        </div>
         <div class="redes">
             <h4>SEGUINOS EN NUESTRAS REDES</h4>
             <a href="#"><i class="fab fa-facebook-square"></i></a>
