--- a/views/carrito.html
+++ b/views/carrito.html
@@ -1,1 +1,15 @@
 <div>holaaaa</div>
+<a href="#">Terminos y condiciones</a><br>
+</div>
+</div>
+<div class="redes">
+<h4>SEGUINOS EN NUESTRAS REDES</h4>
+<a href="#"><i class="fab fa-facebook-square"></i></a>
+<a href="#"><i class="fab fa-instagram-square"></i></a>
+<a href="#"><i class="fab fa-twitter-square"></i></a>
+</div>
+<h6 class="copyright">Copyright © 2022 AlojaMascotas S.R.L.</h6>
+
+</footer>
+
+</body>
