--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -1,2 +1,56 @@
-<div>holaaaa</div>
-<p>hola</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>detalle-producto</title>
+<body>
+    <header>
+    <section class="topheader">
+        <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
+        <img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa">
+        <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
+        <a href="/carrito">
+            <div class="icon-cart"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
+    </section>
+    <section class="subheader">
+        <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
+        <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
+    </section>
+</header>
+<article class="articulo1">
+    <img src="/img/guarderia_canina_1.jpg" alt="guarderia1">
+    <p><div class="nombre-guarderia">Guardería Wag Wag</div></p><br>
+    <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
+    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
+    Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
+    Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
+    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
+    <article class="articulo2">
+        <img src="/img/guarderia_2" alt="guarderia2">
+        <p><div class="nombre-guarderia">Guardería Catis</div></p><br>
+    <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
+    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
+    Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
+    Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
+    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
+
+
+    </article>
+    
+
+    
+    
+</article>
+<body>
+<header>
+
+</header>
+
+<footer>
+
+</footer>
+    
+</body>
+</html>
