--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style-producto.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+
     <title>detalle-producto</title>
+    </head>
 <body>
     <header>
     <section class="topheader">
@@ -17,11 +21,12 @@
     <section class="subheader">
         <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
         <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
+        
     </section>
 </header>
 <article class="articulo1">
     <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1">
-    <p><div class="nombre-guarderia">Guardería Wag Wag</div></p><br>
+    <p><div class="nombre-guarderia">Guardería Wag Wag</div></p>
     <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
     Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
     Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
@@ -29,7 +34,7 @@
     Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
     <article class="articulo2">
         <img src="/img/guarderia_2.jpg" alt="guarderia2" class="imagen2">
-        <p><div class="nombre-guarderia">Guardería Catis</div></p><br>
+        <p><div class="nombre-guarderia">Guardería Catis</div></p>
     <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
     Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
     Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
