--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style-producto.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet">
+    <!-- Links Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
 
     <title>detalle-producto</title>
     </head>
@@ -27,13 +32,17 @@
 <article class="articulo1">
     <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1">
     <p><div class="nombre-guarderia">Guardería Wag Wag</div></p>
+    <p><div class="precios">$$$$</div></p>
     <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
     Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
     Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
     Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
     Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
+    <p><strong>Reservar</strong><i class="fas fa-paw-alt" class="huellita-reserva"></i></p>
+    
     <article class="articulo2">
         <img src="/img/guarderia_2.jpg" alt="guarderia2" class="imagen2">
+        <p><div class="precios">$$$$</div></p>
         <p><div class="nombre-guarderia">Guardería Catis</div></p>
     <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
     Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
@@ -41,17 +50,29 @@
     Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
     Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
     </article>
-    
-
-    
-    
-</article>
-<body>
-<header>
-
-</header>
+    <strong>Reservar</strong>
+    <i class="fas fa-paw-alt" alt="patita"></i>
 
 <footer>
+    <div class="footer-nav">
+        <div class="footer-nav1">
+            <a href="/inicia-sesion">Iniciar Sesion</a><br>
+            <a href="/registro">Registrarse</a><br>
+            <a href="#">Nosotros</a><br>
+        </div>
+        <div class="footer-nav2">
+            <a href="#">Contacto</a><br>
+            <a href="#">FAQ</a><br>
+            <a href="#">Terminos y condiciones</a><br>
+        </div>
+    </div>
+    <div class="redes">
+        <h4>SEGUINOS EN NUESTRAS REDES</h4>
+        <a href="#"><i class="fab fa-facebook-square"></i></a>
+        <a href="#"><i class="fab fa-instagram-square"></i></a>
+        <a href="#"><i class="fab fa-twitter-square"></i></a>
+    </div>
+    <h6 class="copyright">Copyright © 2022 AlojaMascotas S.R.L.</h6>
 
 </footer>
     
