--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -37,21 +37,20 @@
     Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
     Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
     Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
-    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
-    <p><strong>Reservar</strong><i class="fas fa-paw-alt" class="huellita-reserva"></i></p>
-    
+    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p>
+    <div class="reservar"strong>Reservar</strong></div></article><br>
     <article class="articulo2">
         <img src="/img/guarderia_2.jpg" alt="guarderia2" class="imagen2">
-        <p><div class="precios">$$$$</div></p>
         <p><div class="nombre-guarderia">Guardería Catis</div></p>
+        <p><div class="precios">$$$$</div></p>
     <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
     Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
     Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
     Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
-    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
-    </article>
-    <strong>Reservar</strong>
+    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p>
+   <p> <div class="reservar"strong>Reservar</strong></div></p>
     <i class="fas fa-paw-alt" alt="patita"></i>
+</article>
 
 <footer>
     <div class="footer-nav">
