--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -38,7 +38,8 @@
     Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
     Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
     Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
-    <p><strong>Reservar</strong><i class="fas fa-paw" class="huellita-reserva"></i></p>
+    <p> <div class="reservar"strong>Reservar</strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
+    
 
     <article class="articulo2">
         <img src="/img/guarderia_2.jpg" alt="guarderia2" class="imagen2">
@@ -49,8 +50,8 @@
     Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
     Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
     Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p>
-   <p> <div class="reservar"strong>Reservar</strong></div></p>
-    <i class="fas fa-paw-alt" alt="patita"></i>
+   <p> <div class="reservar"strong>Reservar</strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
+
 </article>
 
 <footer>
