--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -33,24 +33,28 @@
     <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1">
     <p><div class="nombre-guarderia">Guardería Wag Wag</div></p>
     <p><div class="precios">$$$$</div></p>
-    <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
-    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
-    Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
-    Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
-    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p></article>
-    <p> <div class="reservar"strong>Reservar</strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
-    
+    <div class="estrellas">
+        <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> </div></p><br>
+    <p><div class="cuerpo-detalle">
+        <p><h1>Características</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
+    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!</p>
+    <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
+    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p>
+    <p> <div class="reservar"strong><a href="#">Reservar</a></strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
+    </article>
 
     <article class="articulo2">
         <img src="/img/guarderia_2.jpg" alt="guarderia2" class="imagen2">
         <p><div class="nombre-guarderia">Guardería Catis</div></p>
         <p><div class="precios">$$$$</div></p>
-    <p><div class="cuerpo-detalle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
-    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!
-    Error enim voluptatem odio, nihil ipsa, asperiores vel voluptate vitae ullam delectus placeat? Blanditiis quis iste similique eligendi maiores deleniti fugiat libero accusantium, assumenda architecto a temporibus obcaecati inventore eos?
-    Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
+        <div class="estrellas">
+        <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> </div></p><br>
+    <div class="cuerpo-detalle">
+        <p><h1>Características</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
+    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!</p>
+    <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
     Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p>
-   <p> <div class="reservar"strong>Reservar</strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
+   <p> <div class="reservar"strong><a href="#">Reservar</a></strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
 
 </article>
 
