cambio en articulo uno

--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -30,7 +30,32 @@
     </section>
 </header>
 <article class="articulo1">
-    <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1">
+    <div class="container">
+        <ul class="slider">
+            <li id="slide1">
+                <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1"> 
+                <li id="slide2">
+                    <img src="/img/guarderia1_slideb.jpg" alt="guarderiab" class="imagen2"> 
+                    <li id="slide3">
+                        <img src="/img/guarderia1_slidec.jpg" alt="guarderiac" class="imagen2">     
+            </li>
+        </ul>
+    </div><br>
+    
+    <ul class="menu-articulo1">
+        <li>
+            <a href="#slide1">1</a> 
+            </li> 
+        <li>
+            <a href="#slide2">2</a>
+        </li>
+        <li>
+            <a href="#slide3">3</a>
+        </li>
+    
+    </ul>
+    
+    <!-- <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1"> -->
     <p><div class="nombre-guarderia">Guardería Wag Wag</div></p>
     <p><div class="precios">$$$$</div></p>
     <div class="estrellas">
@@ -57,6 +82,7 @@
    <p> <div class="reservar"strong><a href="#">Reservar</a></strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
 
 </article>
+
 
 <footer>
     <div class="footer-nav">
