--- a/public/css/style-producto.css
+++ b/public/css/style-producto.css
@@ -88,7 +88,7 @@
   opacity: 80%;
 }
 
-  .imagen1,
+  /* .imagen1,
   .imagen2{
       width: 90%;
       display:block;
@@ -96,14 +96,14 @@
       margin:10px;
       padding: 10px;
 
-  }
+  } */
 h1{
   font-size: 20px;
 
 }
 
   .nombre-guarderia{
-      font-size: 30px;;
+      font-size: 25px;;
       color:#3f4e4a;
       font-weight: bold;
       text-align: center;
@@ -257,5 +257,73 @@ text-decoration:none;
     color:#3f7552;
     display:block;
     text-align: center;
+
+  }
+
+  .container{
+    margin:auto;
+    background-color: white;
+    width: 100%;
+    padding:10px;
+  }
+
+  ul, li{
+    margin:0;
+    padding:0;
+    list-style: none;
+  }
+  ul.slider{
+    position:relative;
+    width: 100%;
+    height: 210px;
+    text-align:center;
+  }
+  ul.slider li {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    opacity: 0;
+    width: inherit;
+    transition: opacity .5s;
+    background:#fff;
+}
+ul.slider li img{
+  height: 250px;
+  object-fit:cover;
+  width: 60%;
+  display: inline-block;
+  margin:auto;
+  margin:5px;
+  padding: 5px;
+}
+
+ul.slider li:first-child {
+    opacity: 1; /*Mostramos el primer <li>*/
+}
+
+ul.slider li:target {
+    opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
+}
+
+
+
+  .menu-articulo1{
+    text-align:center;
+    margin-top: 30px;
+  }
+  .menu-articulo1 li{
+    display:inline-block;
+    text-align: center;
+    
+  }
+  .menu-articulo1 a{
+    display:inline-block;
+    color:white;
+    text-decoration: none;
+    background-color: #3f7552;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 100%;
+  
 
   }
